fix movie info layout and add some constants to mappers

--- a/app/src/main/res/drawable/rounded_shape.xml
+++ b/app/src/main/res/drawable/rounded_shape.xml
@@ -2,7 +2,8 @@
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
+            <corners android:radius="8dp"/>
             <solid android:color="#50FFFFFF" />
         </shape>
     </item>
