--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="red_surface">#E50914</color>
     <color name="bottom_nav_color">#1B958F8F</color>
     <color name="bottom_nav_ripple">#A1F6F4F4</color>
+    <color name="ic_new_launcher_background">#F5F0F0</color>
 </resources>
