--- a/app/src/main/res/layout/fragment_now_in_theatre_movies_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_now_in_theatre_movies_recycler_view.xml
@@ -18,6 +18,16 @@
         app:spanCount="2"
         tools:listitem="@layout/item_now_in_theatre_recycler_view" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/retryButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/retry"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progressBar" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
