--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -36,6 +36,16 @@
         app:spanCount="2"
         tools:listitem="@layout/item_search_result_recycler_view" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/retryButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/retry"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchProgressBar" />
+
     <ProgressBar
         android:id="@+id/searchProgressBar"
         android:layout_width="wrap_content"
