--- a/app/src/main/res/layout/fragment_top250.xml
+++ b/app/src/main/res/layout/fragment_top250.xml
@@ -54,10 +54,21 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:listitem="@layout/item_movie_recycler_view" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/retryButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/retry"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/top250ProgressBar" />
+
         <ProgressBar
             android:id="@+id/top250ProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
